# dinosaur-sfml

./: CMakeLists.txt  README.md  compile_commands.json
.github/workflows/: ci.yml
src/: main.cpp
